# windy-api

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/windy_api/: __init__.py
src/windy_api/api/: __init__.py  api.py
src/windy_api/models/: point_request.py
src/windy_api/schema/: accessors.py  schema.py
tests/: conftest.py  test_accessors.py  test_api_client.py  test_fail.py  test_forecast_response.py  test_point_request.py
